stopgap

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -2,5 +2,6 @@
   &-topBar {
     display: block;
     background-color: blue;
+    height: 50px;
   }
 }
